[package]
name = "gamplo"
authors = ["Jay Churchill"]
categories = ["api-bindings", "game-development", "authentication"]
repository = "https://github.com/rtificr/gamplo-rs"
description = "WIP HTTPS Gamplo Client API. Testing underway, feel free to make contributions"
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"

[dependencies]
anyhow = { version = "1.0.101", optional = true }
chrono = { version = "0.4.43", features = ["serde"], optional = true }
reqwest = { version = "0.13.2", features = ["query"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = { version = "2.5.8", optional = true }
web-sys = { version = "0.3.85", features = ["Window", "Location"], optional = true }

[features]
default = ["client"]
client = ["anyhow", "chrono", "reqwest", "url", "web-sys"]
