[package]
name = "gamplo"
authors = ["Jay Churchill"]
categories = ["api-bindings", "game-development", "authentication"]
repository = "https://github.com/rtificr/gamplo-rs"
description = "WIP HTTPS Gamplo Client API. Testing underway, feel free to make contributions"
license = "GPL-3.0-only"
version = "0.2.0"
edition = "2024"

[profile.release]
opt-level = "s"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
gloo-storage = "0.3.0"
reqwest = { version = "0.13.2", features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
web-sys = { version = "0.3.85", features = ["Window", "Location", "console"] }

[features]
default = ["client"]
client = []
server = []